Set the index to show a simple list of products

--- a/frontend/src/app/product-list/product-list.component.html
+++ b/frontend/src/app/product-list/product-list.component.html
@@ -1,3 +1,15 @@
-<p>
-  product-list works!
-</p>
+<table>
+  <thead>
+    <td>
+      Title
+    </td>
+
+  </thead>
+  <tbody>
+    <tr *ngFor="let p of products">
+      <td>
+        {{p.title}}
+      </td>
+    </tr>
+  </tbody>
+</table>
