--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,44 @@
-<h1>
-  {{title}}
-</h1>
+
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Shopping Cart (0)</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div id="header-image" class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="col-md-6 text-center">
+      <h3 class="opaque-background">Sweet Tooth Boutique</h3>
+      <p class="opaque-background">Lorem ipsum dolor sit amet.</p>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <ul class="nav justify-content-center">
+       <li class="nav-item">
+            <a class="nav-link active" href="#">What's New</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Our Products</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+
+<!-- <router-outlet></router-outlet> -->
+
 <button (click)="onClick()" >Click</button>
 <app-product-list></app-product-list>
+
+<!-- Footer -->
