Add navigation to product-detail component

--- a/frontend/src/app/product-list/product-list.component.html
+++ b/frontend/src/app/product-list/product-list.component.html
@@ -1,2 +1,2 @@
 <app-product *ngFor="let p of products"
-             [product]="p" (click)="displayProduct(p)"></app-product>
+             [product]="p" (click)="goToDetail(p)"></app-product>
