Add checkout component imports

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-8">
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">Shopping Cart (0)</a>
+          <a class="nav-link" routerLink="/checkout">Shopping Cart ({{ shoppingCart.length }})</a>
         </li>
       </ul>
     </div>
