Set product list to display product cards

--- a/frontend/src/app/product/product.component.html
+++ b/frontend/src/app/product/product.component.html
@@ -1,2 +1,7 @@
-<div> {{ product.title }}</div>
-<div> {{ product.price }} €</div>
+<div>
+  <img src="../../assets/img/chocolate-bars.jpg" class="card-img-top img-fluid" />
+  <div class="card-block">
+    <h4 class="card-title"> {{ product.title }}</h4>
+    <p class="card-text"> {{ product.price }} €</p>
+  </div>
+</div>
