--- a/frontend/src/app/product-list/product-list.component.html
+++ b/frontend/src/app/product-list/product-list.component.html
@@ -1,2 +1,6 @@
-<app-product *ngFor="let p of products"
-             [product]="p" (click)="goToDetail(p)"></app-product>
+<div class="container">
+  <div class="card-deck">
+  <app-product id="product-card" class="card" *ngFor="let p of products"
+               [product]="p" (click)="goToDetail(p)"></app-product>
+  </div>
+</div>
