--- a/frontend/src/app/product-detail/product-detail.component.html
+++ b/frontend/src/app/product-detail/product-detail.component.html
@@ -1,28 +1,29 @@
 <div *ngIf="product">
+  <div class="container">
+    <div id="header-and-img" class="row">
+      <div class="col-xs-12 col-sm-6 col-md-8">
+        <p class="h2">{{ product.title }}</p>
+        <img src="../../assets/img/chocolate-bars.jpg" class="rounded img-fluid" />
+      </div>
+      <div id="details" class="col-xs-6 col-md-4">
+        <p id="price">{{ product.price }} €</p>
+        <p id="weight">{{ product.weight }} g</p>
+        <pre id="stock" class="card card-block card-header">Stock: {{ product.stock }}</pre>
+        <button id="cart" type="button" class="btn btn-primary"
+                btnCheckbox
+                btnCheckboxTrue="1" btnCheckboxFalse="0">
+          Add To Cart
+        </button>
 
-  <div id="header-and-img" class="row">
-    <div class="col-xs-12 col-sm-6 col-md-8">
-      <p class="h2">{{ product.title }}</p>
-      <img src="../../assets/img/chocolate-bars.jpg" class="rounded img-fluid" />
-    </div>
-    <div id="details" class="col-xs-6 col-md-4">
-      <p id="price">{{ product.price }} €</p>
-      <p id="weight">{{ product.weight }} g</p>
-      <pre id="stock" class="card card-block card-header">Stock: {{ product.stock }}</pre>
-      <button id="cart" type="button" class="btn btn-primary"
-              btnCheckbox
-              btnCheckboxTrue="1" btnCheckboxFalse="0">
-        Add To Cart
-      </button>
-
-      <div>
-        <p class="h4">Ingredients</p>
-        {{ product.ingredients }}
+        <div>
+          <p class="h4">Ingredients</p>
+          {{ product.ingredients }}
+        </div>
       </div>
     </div>
-  </div>
-  <div id="description">
-    <p class="h4">Description</p>
-    {{ product.description }}
+    <div id="description">
+      <p class="h4">Description</p>
+      {{ product.description }}
+    </div>
   </div>
 </div>
