Add navbar and initial shopping cart function

--- a/frontend/src/app/product-detail/product-detail.component.html
+++ b/frontend/src/app/product-detail/product-detail.component.html
@@ -3,7 +3,7 @@
     <div id="header-and-img" class="row">
       <div class="col-xs-12 col-sm-6 col-md-8">
         <p class="h2">{{ product.title }}</p>
-        <img src="../../assets/img/chocolate-bars.jpg" class="rounded img-fluid" />
+        <img src="{{product.image}}" class="rounded img-fluid" />
       </div>
       <div id="details" class="col-xs-6 col-md-4">
         <p id="price">{{ product.price }} €</p>
