--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,40 +1,34 @@
-
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-8">
-      <ul class="nav justify-content-end">
+<!-- Navigation bar -->
+<nav class="navbar fixed-top navbar-toggleable-md navbar-light">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div id="nav-container" class="container">
+    <a class="navbar-brand" routerLink="">Sweet Tooth Boutique</a>
+    <!-- Collapsing links -->
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/checkout">Shopping Cart ({{ shoppingCart.length }})</a>
+          <a class="nav-link" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            What's New
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/products" routerLinkActive="active">
+            Our Products
+          </a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/checkout" routerLinkActive="active">
+            Shopping Cart ({{ shoppingCart }})
+          </a>
         </li>
       </ul>
     </div>
   </div>
-</div>
-
-<div id="header-image" class="container-fluid">
-  <div class="row justify-content-center">
-    <div class="col-md-6 text-center">
-      <h3 class="opaque-background">Sweet Tooth Boutique</h3>
-      <p class="opaque-background">Lorem ipsum dolor sit amet.</p>
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <ul class="nav justify-content-center">
-       <li class="nav-item">
-            <a class="nav-link active" routerLink="">What's New</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/products">Our Products</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
-
+</nav>
 <!-- Content -->
 <router-outlet></router-outlet>
 
