--- a/frontend/src/app/new-products/new-products.component.html
+++ b/frontend/src/app/new-products/new-products.component.html
@@ -1,3 +1,15 @@
-<p>
-  new-products works!
-</p>
+<div id="header-image" class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="col-md-6 text-center">
+      <h2 class="opaque-background">Sweet Tooth Boutique</h2>
+      <p class="opaque-background">Home of Handmade Confectionery</p>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6 text-center">
+      <h4>What's New</h4>
+    </div>
+  </div>
+</div>
