--- a/frontend/src/app/product/product.component.html
+++ b/frontend/src/app/product/product.component.html
@@ -1,7 +1,13 @@
-<div>
-  <img src="../../assets/img/chocolate-bars.jpg" class="card-img-top img-fluid" />
-  <div class="card-block">
-    <h4 class="card-title"> {{ product.title }}</h4>
-    <p class="card-text"> {{ product.price }} €</p>
+<div class="col">
+  <div class="card">
+    <img src="{{ product.image }}" class="card-img-top img-fluid" />
+    <div class="card-block">
+      <h4 class="card-title"> {{ product.title }}</h4>
+      <p class="card-text"> {{ product.price }} &euro;</p>
+    </div>
+    <div class="card-block">
+      <button type="button" class="btn btn-link" [routerLink]="['/products', product.id]">Details</button>
+      <button type="button" class="btn btn-link" (click)="addToCart(product)">Add to Cart</button>
+    </div>
   </div>
 </div>
