--- a/frontend/src/app/product-detail/product-detail.component.html
+++ b/frontend/src/app/product-detail/product-detail.component.html
@@ -1,5 +1,22 @@
-<div *ngIf="product">
-  <div class="container">
+<div class="modal fade" id="productDetailModal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Shopping Cart</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>{{ modalMessage }}</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+
+  <div *ngIf="product">
     <div id="header-and-img" class="row">
       <div class="col-xs-12 col-sm-6 col-md-8">
         <p class="h2">{{ product.title }}</p>
@@ -11,7 +28,9 @@
         <pre id="stock" class="card card-block card-header">Stock: {{ product.stock }}</pre>
         <button id="cart" type="button" class="btn btn-primary"
                 btnCheckbox
-                btnCheckboxTrue="1" btnCheckboxFalse="0">
+                btnCheckboxTrue="1" btnCheckboxFalse="0"
+                (click)="addToCart(product)"
+                data-toggle="modal" data-target="#productDetailModal">
           Add To Cart
         </button>
 
