--- a/frontend/src/app/product/product.component.html
+++ b/frontend/src/app/product/product.component.html
@@ -7,7 +7,8 @@
     </div>
     <div class="card-block">
       <button type="button" class="btn btn-link" [routerLink]="['/products', product.id]">Details</button>
-      <button type="button" class="btn btn-link" (click)="addToCart(product)">Add to Cart</button>
+      <button type="button" class="btn btn-link" (click)="addToCart(product)"
+      data-toggle="modal" data-target="#produtListModal">Add to Cart</button>
     </div>
   </div>
 </div>
