--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -22,13 +22,16 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" routerLink="/checkout" routerLinkActive="active">
-            Shopping Cart ({{ shoppingCart }})
+            Shopping Cart ({{ shoppingCartTotal }})
           </a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+
+
+
 <!-- Content -->
 <router-outlet></router-outlet>
 
