--- a/frontend/src/app/product-list/product-list.component.html
+++ b/frontend/src/app/product-list/product-list.component.html
@@ -15,6 +15,8 @@
 </div>
 
 <div class="container">
+  <h2>Products</h2>
+  <button *ngIf="isAdmin">+ Add product</button>
   <div class="row align-items-center justify-content-center">
     <app-product *ngFor="let p of products" [product]="p"
     (onAddedToCart)="onAddedToCart($event)">
