--- a/frontend/src/app/add-product/add-product.component.html
+++ b/frontend/src/app/add-product/add-product.component.html
@@ -1,3 +1,41 @@
-<p>
-  add-product works!
-</p>
+<div class="container">
+  <h2>Add product</h2>
+  <form>
+    <div class="form-group">
+      <label>Title</label>
+      <input type="text" class="form-control" required />
+    </div>
+
+    <div class="form-group">
+      <label>Description</label>
+      <input type="text" class="form-control" required />
+    </div>
+
+    <div class="form-group">
+      <label>Ingredients</label>
+      <input type="text" class="form-control" required />
+    </div>
+
+    <div class="form-group">
+      <label>Weight</label>
+      <input type="text" class="form-control" required />
+    </div>
+
+    <div class="form-group">
+      <label>Price</label>
+      <input type="text" class="form-control" required />
+    </div>
+
+    <div class="form-group">
+      <label>Stock</label>
+      <input type="text" class="form-control" required />
+    </div>
+
+    <div class="form-group">
+      <label>Image</label>
+      <input type="text" class="form-control" required />
+    </div>
+
+    <button type="submit">Submit</button>
+  </form>
+</div>
