--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -18,6 +18,11 @@
             Our Products
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/admin" routerLinkActive="active">
+            Admin
+          </a>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
