--- a/frontend/src/app/add-product/add-product.component.html
+++ b/frontend/src/app/add-product/add-product.component.html
@@ -1,16 +1,59 @@
 <div class="container">
   <h2>Add product</h2>
+
+  <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
+
+    <ul>
+      <li>
+        <label>Title</label>
+        <input type="text" formControlName="title" />
+      </li>
+
+      <li>
+        <label>Description</label>
+        <input type="text" formControlName="desc" />
+      </li>
+
+      <li>
+        <label>Ingredients</label>
+        <input type="text" formControlName="ingredients" />
+      </li>
+
+      <li>
+        <label>Weight</label>
+        <input type="text" formControlName="weight" />
+      </li>
+
+      <li>
+        <label>Price</label>
+        <input type="text" formControlName="price" />
+      </li>
+
+      <li>
+        <label>Stock</label>
+        <input type="text" formControlName="stock" />
+      </li>
+
+      <li>
+        <label>Image</label>
+        <input type="text" formControlName="image" />
+      </li>
+    </ul>
+    <button type="submit">Submit</button>
+  </form>
+
+  <!--
   <form (ngSubmit)="onSubmit()" #addProductForm="ngForm">
     <div class="form-group">
       <label>Title</label>
       <input type="text" class="form-control" required
-             [(ngModel)]="tmpProduct.title" name="title" />
+             [(ngModel)]="tProduct.title" name="title" />
     </div>
 
     <div class="form-group">
       <label>Description</label>
       <input type="text" class="form-control" required
-             [(ngModel)]="tmpProduct.description" name="description" />
+             [(ngModel)]="tmpProduct.desc" name="description" />
     </div>
 
     <div class="form-group">
@@ -43,6 +86,6 @@
              [(ngModel)]="tmpProduct.image" name="image" />
     </div>
 
-    <button type="submit">Submit</button>
-  </form>
+
+  </form> -->
 </div>
