Refactor checkout component to shoppingcart component

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -21,7 +21,7 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/checkout" routerLinkActive="active">
+          <a class="nav-link" routerLink="/shoppingcart" routerLinkActive="active">
             Shopping Cart ({{ shoppingCartTotal }})
           </a>
         </li>
