Set image input type to file and set the submit method to pass an image url

--- a/frontend/src/app/add-product/add-product.component.html
+++ b/frontend/src/app/add-product/add-product.component.html
@@ -36,7 +36,7 @@
 
       <li>
         <label>Image</label>
-        <input type="text" formControlName="image" />
+        <input type="file" #fileInput (change)="fileSelected($event)" formControlName="image"  />
       </li>
     </ul>
     <button type="submit">Submit</button>
