--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -77,6 +77,7 @@ $font-family-sans-serif: "Open Sans", -apple-system, system-ui, BlinkMacSystemFo
 .opaque-background {
     background: rgba(255, 255, 255, 0.3);
     box-shadow: 0px 1px 4px -2px rgba(0,0,0,0.15);
+    border-radius: 2px;
 }
 
 .navbar-brand {
@@ -110,4 +111,16 @@ $font-family-sans-serif: "Open Sans", -apple-system, system-ui, BlinkMacSystemFo
     .navbar-brand {
         width: 200px;
     }
+}
+
+.clear-navbar {
+    padding-top: 100px;
+}
+
+footer {
+    height: 50px;
+}
+
+h4 {
+    padding-bottom: 40px;
 }
