--- a/frontend/src/app/product-detail/product-detail.component.html
+++ b/frontend/src/app/product-detail/product-detail.component.html
@@ -14,7 +14,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container clear-navbar">
 
   <div *ngIf="product">
     <div id="header-and-img" class="row">
