--- a/frontend/src/app/product-list/product-list.component.html
+++ b/frontend/src/app/product-list/product-list.component.html
@@ -14,7 +14,10 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container clear-navbar">
+  <div class="row align-items-center justify-content-center">
+      <h4>Our Products</h4>
+  </div>
   <div class="row align-items-center justify-content-center">
     <app-product *ngFor="let p of products" [product]="p"
     (onAddedToCart)="onAddedToCart($event)">
