--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -60,7 +60,7 @@ $font-family-sans-serif: "Open Sans", -apple-system, system-ui, BlinkMacSystemFo
 #header-image {
     padding-top: 32vh;
     height: 70vh;
-    background: url("https://dl.dropboxusercontent.com/s/0u0v2cc7mw6dytc/chocolate-assortment.jpg?") no-repeat center center fixed;
+    background: url("https://dl.dropboxusercontent.com/s/0u0v2cc7mw6dytc/chocolate-assortment.jpg") no-repeat center center fixed;
     background-size: cover;
     box-shadow: 0px 1px 4px -2px rgba(0,0,0,0.55);
 
