Rewrite shopping cart logic for easier use

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -25,7 +25,7 @@
       <ul class="navbar-nav" data-toggle="collapse" data-target=".navbar-collapse.show">
         <li class="nav-item">
           <a class="nav-link" routerLink="/shoppingcart" routerLinkActive="active">
-            Shopping Cart ({{ shoppingCartTotal }})
+            Shopping Cart ({{ shoppingCart.total }})
           </a>
         </li>
       </ul>
