--- a/frontend/src/app/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.html
@@ -2,12 +2,12 @@
   <div class="row justify-content-center">
     <div class="col-md-8 text-center">
       <h4>Shopping Cart</h4>
-      <p *ngIf="items.length === 0">No products in cart. Browse <a routerLink="/products">products</a>.</p>
+      <p *ngIf="cart.items.length === 0">No products in cart. Browse <a routerLink="/products">products</a>.</p>
     </div>
   </div>
 
   <!-- If products in shopping cart -->
-  <div *ngIf="items.length > 0" class="row justify-content-center">
+  <div *ngIf="cart.items.length > 0" class="row justify-content-center">
     <div class="col-md-8">
       <!-- Table head -->
       <table class="table table-sm">
@@ -22,8 +22,8 @@
         </thead>
       
         <!-- Tably body, products from shopping cart -->
-        <tbody class="">
-          <tr *ngFor="let item of items">
+        <tbody>
+          <tr *ngFor="let item of cart.items">
             <td><a [routerLink]="['/products', item.product.id]">{{ item.product.title }}</a></td>
             <td>{{ roundPrice(item.product.price)}} &euro;</td>
             <td>
