--- a/frontend/src/app/new-products/new-products.component.html
+++ b/frontend/src/app/new-products/new-products.component.html
@@ -2,16 +2,23 @@
   <div class="row justify-content-center">
     <div class="col-md-6 text-center">
       <h2 class="opaque-background">Sweet Tooth Boutique</h2>
-      <p class="opaque-background">Home of Handmade Confectionery</p>
+      <p class="opaque-background big-text">Home of Handmade Confectionery</p>
     </div>
   </div>
 </div>
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-6 text-center">
-      <h4>What's New</h4>
+      <div id="boutique-description" class="big-text">
+        Sweet Tooth Boutique makes handcrafted chocolate delights.
+        We use fresh and organic ingredients with no preservatives or artificial flavors.
+      </div>
     </div>
   </div>
+
+  <div class="row justify-content-center">
+    <h4>Featured Products</h4>
+  </div> 
 
   <div class="row justify-content-center">
     <div id="newProductsCarousel" class="carousel slide" data-ride="carousel">
@@ -26,8 +33,9 @@
           <div class="carousel-caption">
             <a [routerLink]="['/products', product.id]"><h5>{{ product.title }}</h5></a>
           </div>
-          <img class="d-block img-fluid carousel-product-image" 
-          src="{{ product.image }}" alt="product.title">
+          <div class="carousel-product-image-wrapper">
+            <img class="d-block img-fluid carousel-product-image" src="{{ product.image }}" alt="product.title">
+          </div>
         </div>
       </div>
     </div>
