--- a/frontend/src/app/new-products/new-products.component.scss
+++ b/frontend/src/app/new-products/new-products.component.scss
@@ -1,5 +1,5 @@
-h4 {
-    margin-top: 40px;
+#boutique-description {
+    margin: 50px 0;
 }
 
 .carousel-indicators li {
@@ -15,10 +15,14 @@ span.carousel-control-prev-icon{
   background-color: rgba(70,70,70,1);
 }
 
+.carousel-product-image-wrapper {
+    width: 90%;
+    max-width: 500px;
+}
+
 .carousel-product-image {
-    width: 400px;
-    max-width: 100%;
-    height: 100%;
+    width: 100%;
+    height: auto;
 }
 
 .carousel-caption {
@@ -43,11 +47,16 @@ span.carousel-control-prev-icon{
     }
 
     h5 {
-      padding: 5px;
+      padding: 10px 0;
       background-color: rgba(70,70,70,0.9);
-      width: 400px;
-      max-width: 100%;
+      width: 500px;
+      max-width: 90%;
+      margin: 0 auto;
       font-weight: normal;
       border-radius: 2px;
     }
+}
+
+.big-text {
+    font-size: 1.1em;
 }
