--- a/frontend/src/app/product/product.component.html
+++ b/frontend/src/app/product/product.component.html
@@ -5,7 +5,7 @@
       <h4 class="card-title"> {{ product.title }}</h4>
       <p class="card-text"> {{ product.price }} &euro;</p>
     </div>
-    <div class="card-block">
+    <div class="card-block card-buttons-block">
       <button type="button" class="btn btn-link" [routerLink]="['/products', product.id]">Details</button>
       <button type="button" class="btn btn-link" (click)="addToCart(product)"
       data-toggle="modal" data-target="#produtListModal">Add to Cart</button>
