--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,14 +11,14 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-          <a class="nav-link"
+          <!--<a class="nav-link"
           routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
             What's New
-          </a>
+          </a>-->
         </li>
         <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
           <a class="nav-link" routerLink="/products" routerLinkActive="active">
-            Our Products
+            Shop Chocolate
           </a>
         </li>
       </ul>
