--- a/frontend/src/app/product/product.component.scss
+++ b/frontend/src/app/product/product.component.scss
@@ -15,3 +15,12 @@
     cursor: pointer;
   }
 }
+
+h4 {
+  padding-bottom: 0px;
+}
+
+.card-buttons-block {
+  padding-top: 0px;
+  padding-bottom: 5px;
+}
