--- a/frontend/src/app/product-list/product-list.component.html
+++ b/frontend/src/app/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <div class="container clear-navbar">
   <div class="row align-items-center justify-content-center">
-      <h4>Shop Chocolate</h4>
+    <h4>Shop Chocolate</h4>
   </div>
 
   <!-- Nav pills -->
@@ -22,7 +22,6 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown"
-        (click)="activeId = 3"
         [class.active]="activeId === 3"
         href="#" role="button" aria-haspopup="true" aria-expanded="false">
         Chocolates
@@ -37,11 +36,29 @@
         </div>
       </li>
       <li class="nav-item">
-          <a (click)="search($event)"
+          <a (click)="searchProducts($event)"
           [class.active]="activeId === 4"
           class="nav-link" href="#">Search</a>
       </li>
     </ul>
+  </div>
+</div>
+
+<!-- Search (searchNav active -> activeID is 4) -->
+<div *ngIf="activeId === 4" class="container">
+  <div class="row align-items-center justify-content-center">
+    <input (keyup)="onKeyUp($event)"
+    name="searchWord" [(ngModel)]="searchWord" 
+    class="form-control search-input" type="search" 
+    [placeholder]="searchHint">
+  </div>
+  <div *ngIf="noResults" class="row align-items-center justify-content-center">
+    <p id="no-results">No results.</p>
+  </div>
+  <div class="row align-items-center justify-content-center">
+    <app-product *ngFor="let p of searchResults" [product]="p"
+    (onAddedToCart)="onAddedToCart($event)">
+    </app-product>
   </div>
 </div>
 
