--- a/frontend/src/app/product-list/product-list.component.scss
+++ b/frontend/src/app/product-list/product-list.component.scss
@@ -1,6 +1,15 @@
 .nav-tabs {
     width: 90%;
     max-width: 820px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
+.search-input {
+    width: 100%;
+    max-width: 400px;
+}
+
+#no-results {
+    margin-top: 20px;
+}
