Add buttons and titles to modals

--- a/frontend/src/app/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.html
@@ -57,4 +57,7 @@
       </table>
     </div>
   </div>
+  <div *ngIf="cart.items.length > 0" class="row justify-content-center">
+    <button type="button" class="btn btn-primary">Checkout</button>
+  </div>
 </div>
