--- a/frontend/src/app/product-list/product-list.component.html
+++ b/frontend/src/app/product-list/product-list.component.html
@@ -110,13 +110,19 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Shopping Cart</h5>
+        <h5 class="modal-title">{{ modalTitle }}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         <p>{{ modalMessage }}</p>
+        <button *ngIf="modalTitle === 'Item Added'"
+        data-dismiss="modal"
+        routerLink="/shoppingcart"
+        type="button" class="btn btn-secondary">
+         Show Shopping Cart
+        </button>
       </div>
     </div>
   </div>
