Add stepper to shopping cart/checkout

--- a/frontend/src/app/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.html
@@ -1,7 +1,27 @@
 <div class="container clear-navbar">
+  <!-- Show stepper if products in cart -->
+  <div *ngIf="cart.items.length > 0" class="row justify-content-center">
+    <div class="col-md-8 text-center cart-icons">
+      <a routerLink="/shoppingcart">
+        <i class="material-icons cart-icon active-icon">shopping_cart</i>
+      </a>
+      <span class="line-dotted"></span>
+      <a routerLink="/checkout">
+        <i class="material-icons cart-icon">home</i>
+      </a>
+      <span class="line-dotted"></span>
+      <i class="material-icons cart-icon">credit_card</i>
+      <span class="line-dotted"></span>
+      <i class="material-icons cart-icon">done</i>
+    </div>
+  </div>
+</div>
+
+<div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8 text-center">
       <h4>Shopping Cart</h4>
+      <!-- If no products -->
       <p *ngIf="cart.items.length === 0">No products in cart. Browse <a routerLink="/products">products</a>.</p>
     </div>
   </div>
@@ -58,6 +78,7 @@
     </div>
   </div>
   <div *ngIf="cart.items.length > 0" class="row justify-content-center">
-    <button type="button" class="btn btn-primary">Checkout</button>
+    <button routerLink="/checkout"
+    type="button" class="btn btn-primary">Checkout</button>
   </div>
 </div>
