--- a/frontend/src/app/product-list/product-list.component.scss
+++ b/frontend/src/app/product-list/product-list.component.scss
@@ -1,12 +1,10 @@
 .nav-tabs {
-    width: 90%;
-    max-width: 820px;
-    margin-top: 20px;
-    margin-bottom: 40px;
+  width: 90%;
+  max-width: 820px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
-.search-input {
-    width: 100%;
-    max-width: 400px;
-    margin-top: 20px;
+.search-div {
+  margin-bottom: 20px;
 }
