--- a/frontend/src/app/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.html
@@ -40,7 +40,7 @@
             <th></th>
           </tr>
         </thead>
-      
+
         <!-- Tably body, products from shopping cart -->
         <tbody>
           <tr *ngFor="let item of cart.items">
@@ -48,22 +48,17 @@
             <td>{{ roundPrice(item.product.price)}} &euro;</td>
             <td>
               <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" 
-                id="dropdownMenuButtonAmount" data-toggle="dropdown" aria-haspopup="true" 
-                aria-expanded="false">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonAmount" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 {{ item.amount }}
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonAmount">
-                  <a *ngFor="let number of stockToArray(item.product.stock)" 
-                  class="dropdown-item"
-                  (click)="changeAmount(item, number)">{{ number }}</a>
+                  <a *ngFor="let number of stockToArray(item.product.stock)" class="dropdown-item" (click)="changeAmount(item, number)">{{ number }}</a>
                 </div>
               </div>
             </td>
             <td>{{ roundPrice(item.product.price * item.amount) }} &euro;</td>
             <td>
-              <button type="button" class="btn btn-secondary" 
-              (click)="removeItem(item)">X</button>
+              <button type="button" class="btn btn-secondary" (click)="removeItem(item)">X</button>
             </td>
           </tr>
           <tr>
@@ -78,7 +73,8 @@
     </div>
   </div>
   <div *ngIf="cart.items.length > 0" class="row justify-content-center">
-    <button routerLink="/checkout"
-    type="button" class="btn btn-primary">Checkout</button>
+    <div class="col-md-8 text-right">
+      <button routerLink="/checkout" type="button" class="btn btn-primary">Continue</button>
+    </div>
   </div>
 </div>
