--- a/frontend/src/app/shopping-cart/shopping-cart.component.scss
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.scss
@@ -1,30 +1,37 @@
 /* Shopping cart icon styles */
+
 .cart-icon {
-    color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .cart-icons {
-    margin-bottom: 40px;
-
-    a:hover {
-        text-decoration: none;
-    }
+  margin-bottom: 40px;
+  a:hover {
+    text-decoration: none;
+  }
+  .material-icons {
+    font-size: 32px;
+  }
 }
 
 .active-icon {
-    color: #292b2c;
+  color: #292b2c;
 }
 
 .line {
-   width: 50px;
-   display: inline-block;
-   border-bottom: 2px solid rgba(0, 0, 0, 0.5); 
-   margin-bottom: 10px;
+  width: 50px;
+  display: inline-block;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.5);
+  margin-bottom: 10px;
 }
 
 .line-dotted {
-   width: 50px;
-   display: inline-block;
-   border-bottom: 2px dotted rgba(0, 0, 0, 0.5); 
-   margin-bottom: 10px;
+  width: 50px;
+  display: inline-block;
+  border-bottom: 2px dotted rgba(0, 0, 0, 0.5);
+  margin-bottom: 10px;
+}
+
+.bottom-navigation {
+  margin-top: 20px;
 }
