--- a/frontend/src/app/product-list/product-list.component.html
+++ b/frontend/src/app/product-list/product-list.component.html
@@ -68,18 +68,13 @@
   <div *ngIf="noResults && searchOptions()" class="row align-items-center justify-content-center">
     <p>No results.</p>
   </div>
-  <!--
-  <div class="row align-items-center justify-content-center">
-    <app-product *ngFor="let p of searchResults" [product]="p" (onAddedToCart)="onAddedToCart($event)">
-    </app-product>
-  </div>-->
 </div>
 
 <!-- Show products -->
 <div class="container">
   <div class="row align-items-center justify-content-center">
-    <app-product *ngFor="let p of shownProducts" [product]="p" (onAddedToCart)="onAddedToCart($event)">
-    </app-product>
+    <app-product-card *ngFor="let p of shownProducts" [product]="p" (onAddedToCart)="onAddedToCart($event)">
+    </app-product-card>
   </div>
 </div>
 
