--- a/frontend/src/app/admin/admin.component.scss
+++ b/frontend/src/app/admin/admin.component.scss
@@ -1,3 +1,13 @@
 .container {
   margin-top: 100px;
 }
+
+.rounded {
+  padding: 16px;
+  max-height: 20%;
+  max-width: 20%;
+}
+
+.card {
+  margin-bottom: 16px;
+}
