--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -17,19 +17,20 @@
           </a>-->
         </li>
         <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-          <a class="nav-link" routerLink="/products" routerLinkActive="active">
+          <a *ngIf="router.url !== '/admin'" 
+          class="nav-link" routerLink="/products" routerLinkActive="active">
             Shop Chocolate
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/admin" routerLinkActive="active">
+          <a *ngIf="router.url === '/admin'" class="nav-link" routerLink="/admin" routerLinkActive="active">
             Admin
           </a>
         </li>
       </ul>
       <ul class="navbar-nav" data-toggle="collapse" data-target=".navbar-collapse.show">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/shoppingcart" routerLinkActive="active">
+          <a *ngIf="router.url !== '/admin'" class="nav-link" routerLink="/shoppingcart" routerLinkActive="active">
             Shopping Cart ({{ shoppingCart.total }})
           </a>
         </li>
