--- a/frontend/src/app/registration/registration.component.html
+++ b/frontend/src/app/registration/registration.component.html
@@ -1,3 +1,60 @@
-<p>
-  registration works!
-</p>
+<div class="container">
+  <form>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label>First name</label>
+          <input class="form-control" type="text" />
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <label>Last name</label>
+          <input class="form-control" type="text" />
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label>Your email address</label>
+      <input class="form-control" type="text" />
+    </div>
+
+    <div class="form-group">
+      <label>Street address</label>
+      <input class="form-control" type="text" />
+    </div>
+
+    <div class="form-group">
+      <label>Post code</label>
+      <input class="form-control" type="text" />
+    </div>
+
+    <div class="form-group">
+      <label>City</label>
+      <input class="form-control" type="text" />
+    </div>
+
+    <div class="form-group">
+      <label>Country</label>
+      <input class="form-control" type="text" />
+    </div>
+
+    <div class="form-group">
+      <label>Username</label>
+      <input class="form-control" type="text" />
+    </div>
+
+    <div class="form-group">
+      <label>Choose a password</label>
+      <input class="form-control" type="password" />
+    </div>
+
+    <div class="form-group">
+      <label>Re-enter password</label>
+      <input class="form-control" type="password" />
+    </div>
+
+    <button type="submit" class="btn btn-link">Register</button>
+  </form>
+</div>
