--- a/frontend/src/app/add-product/add-product.component.html
+++ b/frontend/src/app/add-product/add-product.component.html
@@ -1,5 +1,5 @@
 
-          <h4>Add product</h4>
+          <h4>Add Product</h4>
           <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
 
             <div class="form-group">
