--- a/frontend/src/app/admin/admin.component.scss
+++ b/frontend/src/app/admin/admin.component.scss
@@ -1,11 +1,7 @@
-.container {
-  margin-top: 100px;
-}
-
 .rounded {
   padding: 16px;
-  max-height: 10rem;
   max-width: 10rem;
+  height: auto;
 }
 
 .card {
@@ -21,26 +17,7 @@
   box-shadow: 0;
 }
 
-.add-product-collapse {
-  margin-top:50px;
-}
-
-.add-product-header {
-  display: inline-block;
-  vertical-align: middle;
-  float: left;
-}
-
 .add-product-button {
-  display: inline-block;
-  vertical-align: middle;
-  float:right;
+  margin-bottom: 10px;
 }
 
-.admin-navbar {
-  margin-bottom: 50px;
-}
-
-.admin-component-header {
-  margin-bottom: 16px;
-}
