Surround product img with div

--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -32,7 +32,10 @@
     <div class="row justify-content-center" *ngFor="let p of products">
       <div class="col-md-8">
         <div class="media">
-          <img class="d-flex mr-3 rounded img-fluid" src="{{ p.image }}" />
+          <div class="rounded">
+            <img class="d-flex mr-3 img-fluid" src="{{ p.image }}" />
+          </div>
+          
           <div class="media-body">
             <h5 class="mt-0">{{ p.title }}</h5>
 
